# cartomata

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
cartomata_derive/: Cargo.toml
cartomata_derive/src/: expand.rs  lib.rs
examples/: cli.rs  sample.csv  sample.db
src/: abox.rs  cli.rs  color.rs  data.rs  decode.rs  error.rs  image.rs  layer.rs  lib.rs  logs.rs  main.rs  pipeline.rs  template.rs  text.rs
src/cli/: card.rs  config.rs  decode.rs  output.rs  source.rs  template.rs
src/data/: card.rs  predicate.rs  source.rs  value.rs
src/data/source/: csv.rs  sqlite.rs
src/decode/: dynamic.rs
src/image/: blend.rs  color.rs  map.rs  origin.rs  stroke.rs
src/layer/: artwork.rs  asset.rs  label.rs  text.rs
src/pipeline/: parallel.rs  sequential.rs
src/text/: attr.rs  font.rs  markup.rs  parser.rs
