[workspace]
resolver = "2"
members = ["cartomata_derive"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74" # MSRV
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "benches/**/*",
    "examples/**/*",
]

[package]
name = "cartomata"
authors = ["piface314"]
repository = "https://github.com/piface314/cartomata"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = ""

[features]
default = ["derive"]
derive = ["dep:cartomata_derive"]

[dependencies]
cartomata_derive = { path = "./cartomata_derive", version = "=0.1.0", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.1"
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
regex = "1.10.4"
ril = { git = "https://github.com/piface314/ril.git", version = "^0.11.0-beta.0", features = [
    "all",
] }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive", "std"] }
serde_rusqlite = "0.35.0"
toml = "0.8.12"
