[workspace]
resolver = "2"
members = ["cartomata_derive"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74" # MSRV
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "benches/**/*",
    "examples/**/*",
]

[package]
name = "cartomata"
authors = ["piface314"]
repository = "https://github.com/piface314/cartomata"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
cairo-rs = { version = "0.19.4", features = ["png"] }
cartomata_derive = { path = "./cartomata_derive", version = "=0.1.0" }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.1"
libvips = "1.7.0"
logos = "0.14.0"
mlua = { version = "0.9.6", features = ["lua54", "vendored", "serialize"] }
pango = { version = "0.19.8", features = ["v1_52"] }
pangocairo = "0.19.8"
png = "0.17.13"
regex = "1.10.4"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive", "std"] }
serde_rusqlite = "0.35.0"
toml = "0.8.12"
yeslogic-fontconfig = "0.1.1"
yeslogic-fontconfig-sys = { version = "^2.11.1" }
