[workspace]
resolver = "2"
members = ["cartomata_derive"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74" # MSRV
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "benches/**/*",
    "examples/**/*",
]

[package]
name = "cartomata"
authors = ["piface314"]
repository = "https://github.com/piface314/cartomata"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
cairo-rs = { version = "0.20.1", features = ["png"] }
cartomata_derive = { path = "./cartomata_derive", optional = true }
clap = { version = "4.5.16", features = ["derive"], optional = true }
csv = { version = "1.3.0", optional = true }
itertools = "0.13.0"
libvips = "1.7.0"
logos = "0.14.1"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "serialize"], optional = true }
pango = { version = "0.20.1", features = ["v1_52"] }
pangocairo = "0.20.1"
png = "0.17.13"
regex = "1.10.6"
rusqlite = { version = "0.32.1", optional = true }
serde = { version = "1.0.209", features = ["derive", "serde_derive", "std"] }
serde_rusqlite = { version = "0.36.0", optional = true }
termion = "4.0.2"
toml = { version = "0.8.19", optional = true }
yeslogic-fontconfig = "0.1.1"
yeslogic-fontconfig-sys = { version = "^2.11.1" }

[features]
default = ["cli", "csv", "sqlite"]
derive = ["dep:cartomata_derive"]
cli = ["derive", "dep:clap", "dep:mlua", "dep:toml"]
csv = ["dep:csv"]
sqlite = ["dep:rusqlite", "dep:serde_rusqlite"]
