[package]
name = "cartomata_derive"
version = "0.1.0"
description = ""
repository = "https://github.com/piface314/cartomata/tree/main/cartomata_derive"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.8", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.69"
